# brix-lang

./: CLAUDE.md  Cargo.toml  DOCUMENTATION.md  NEXT_STEPS.md  runtime.c
.claude/: CLAUDE.md
.claude/agents/: codegen-dev.md  parser-dev.md  reviewer.md  runtime-dev.md  test-writer.md
.claude/skills/add-builtin/: SKILL.md
.claude/skills/add-test-matcher/: SKILL.md
.claude/skills/add-type/: SKILL.md
.claude/skills/brix-test/: SKILL.md
crates/codegen/: Cargo.toml
crates/lexer/: Cargo.toml
crates/parser/: Cargo.toml
examples/: closure_simple.bx  closure_test_simple.bx  generic_call_test.bx  generic_function_test.bx  generic_identity_test.bx  generic_inference_test.bx  generic_instantiation_test.bx  generic_method_advanced.bx  generic_method_simple.bx  generic_method_test.bx  generic_multiple_test.bx  generic_simple_test.bx  generic_struct_pair_test.bx  generic_struct_test.bx  generics_parse_test.bx  simple_function_test.bx  test_simple_method.bx
src/: main.rs
tests/: integration_test.rs
tests/brix/: arrays_v17.test.bx  async.test.bx  atoms.test.bx  bitwise.test.bx  closures.test.bx  collections_v18.test.bx  complex.test.bx  comprehensions.test.bx  control_flow.test.bx  functions.test.bx  generics.test.bx  intmatrix.test.bx  iterators.test.bx  logical.test.bx  match.test.bx  math.test.bx  math_v18.test.bx  matrix.test.bx  primitives.test.bx  stats.test.bx  strings.test.bx  strings_v16.test.bx  strings_v17.test.bx  structs.test.bx  test_matchers_v17.test.bx  type_checking.test.bx  type_conversion.test.bx  types_v14.test.bx
tests/integration/: README.md
(+305 files in other folders)
